@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-23T00:59:29Z",
+  "timestamp" : "2025-06-24T00:56:19Z",
   "count_outdated" : 1332,
   "uniques_outdated" : 854,
-  "count" : 1337,
-  "uniques" : 859,
+  "count" : 1338,
+  "uniques" : 860,
   "clones" : [
     {
       "timestamp": "2025-06-18T00:00:00Z",
@@ -43,6 +43,15 @@
     },
     {
       "timestamp": "2025-06-22T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-06-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
