@@ -1,3 +1,12 @@
+2025-06-24T00:56:19Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15838523624 # 684
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-24
+* notice: last 14d: unq all: 1 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 854 1332 / 859 1337
+* notice: next accum: outdated-unq outdated-all / unq all: 854 1332 / 860 1338
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-06-23]
+
 2025-06-23T00:59:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/15812787207 # 683
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-06-23
